--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <%= form_with model: @tarticle do |f| %>
+    <%= form_with model: @article do |f| %>
       <%= f.label :title %>
       <%= f.text_field :title %>
       <%= f.label :content %>
