--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,12 +1,18 @@
+
+<%= form_with model: @article do |f| %>
 <div class="card">
   <div class="card-body">
-    <%= form_with model: @article do |f| %>
-      <%= f.label :title %>
-      <%= f.text_field :title %>
-      <%= f.label :content %>
-      <%= f.text_field :content %>
-      <%= f.submit %>
-    <% end %>
-  <a><%= link_to "Back", articles_path %></a>
+    <div class="mb-3">
+      <%= f.label :title, {class: "form-label"} %>
+      <%= f.text_field :title, {class: "form-control"} %>
+    </div>
+    <div class= "mb-3">
+      <%= f.label :content, {class: "form-label"}  %>
+      <%= f.text_field :content, {class: "form-control"} %>
+    </div>
+    <%= f.submit "Submit", class: "btn btn-primary" %>
   </div>
 </div>
+<% end %>
+
+<p class="mt-2"><%= link_to "Back", articles_path, class: "text-decoration-none mt-2" %></p>
