--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,8 @@
-<ul><% @articles.each do |article| %></ul>
-  <li> <strong>Title: <%= link_to article.title, article_path(article) %></strong>.- Content: <%= article.content %></li>
-<% end %>
-<%= link_to "Create new article", new_article_path %>
+<ul class="container text-center py-1">
+  <% @articles.each do |article| %>
+    <li class="article-item mb-4">
+      <h3><%= link_to article.title, article_path(article), class: "list-group display-6 text-decoration-none" %></h3>
+      <p class="mx-4"><%= article.content %></p>
+    </li>
+  <% end %>
+</ul>
