--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,17 @@
-<h1>Title: <%= @article.title %></h1>
-<h3>Content: <%= @article.content %></h3>
-<a> <%= link_to "Back", articles_path %></a>
-<a> <%= link_to "Edit", edit_article_path(@article) %></a>
-<a> <%= link_to "Delete", article_path(@article),  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></a>
+<div class="card">
+    <div class="card-header d-flex align-items-center justify-content-between">
+      <h3 class="display-6 card-title-color"><%= @article.title %></h3>
+      <div>
+        <%= link_to edit_article_path(@article), class: "me-2" do %>
+          <i class="fa-sharp fa-solid fa-pencil"></i>
+        <% end %>
+        <%= link_to article_path(@article),  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
+          <i class="fa-solid fa-trash-can"></i>
+        <% end %>
+      </div>
+    </div>
+  <div class="card-body">
+    <p class="text-center"><%= @article.content %></p>
+  </div>
+</div>
+<p class="mt-2"><%= link_to "Back", articles_path, class: "text-decoration-none mt-2" %></p>
